--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
@@ -21,6 +22,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.0.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
