--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -261,6 +261,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.fresco:fresco:2.6.0'
+    implementation 'com.facebook.fresco:animated-gif:2.6.0'
+      
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
