--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.2",
